Augmented the entire dataset (train + test)

--- a/keypoint_classification_EN.ipynb
+++ b/keypoint_classification_EN.ipynb
@@ -2,11 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {
         "id": "igMyGnjE9hEp"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Python310\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import csv\n",
         "\n",
@@ -29,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 2,
       "metadata": {
         "id": "9NvZP2Zn9hEy"
       },
@@ -51,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 3,
       "metadata": {
         "id": "du4kodXL9hEz"
       },
@@ -71,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 4,
       "metadata": {
         "id": "QT5ZqtEz9hE0"
       },
@@ -82,13 +91,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 5,
       "metadata": {
         "id": "QmoKFsp49hE0"
       },
       "outputs": [],
       "source": [
         "y_dataset = np.loadtxt(dataset, delimiter=',', dtype='int32', usecols=(0))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[310., 390., 282., ..., 274., 390., 256.],\n",
+              "       [306., 388., 279., ..., 271., 384., 254.],\n",
+              "       [306., 387., 280., ..., 268., 379., 251.],\n",
+              "       ...,\n",
+              "       [159., 357., 196., ..., 259., 113., 262.],\n",
+              "       [150., 352., 185., ..., 261.,  71., 253.],\n",
+              "       [145., 341., 193., ..., 285., 155., 267.]], dtype=float32)"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "X_dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  1,\n",
+              "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2,  2,  2,  2,\n",
+              "        2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  3,  3,  3,  3,  3,  3,\n",
+              "        3,  3,  3,  3,  3,  3,  3,  3,  3,  4,  4,  4,  4,  4,  4,  4,  4,\n",
+              "        4,  4,  4,  4,  4,  4,  4,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,\n",
+              "        5,  5,  5,  5,  5,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,\n",
+              "        6,  6,  6,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,\n",
+              "        7,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  9,\n",
+              "        9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9, 10, 10, 10,\n",
+              "       10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,\n",
+              "       10, 10, 10, 10, 10, 10, 10, 10, 10, 10])"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "y_dataset"
       ]
     },
     {
@@ -102,90 +167,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 1. Augmenting the data via rotation"
+        "### 1. Augmenting the data via rotation and shearing"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def rotate_point(x, y, cx, cy, angle):\n",
-        "    rad = math.radians(angle)\n",
-        "    x_new = (x - cx) * math.cos(rad) - (y - cy) * math.sin(rad) + cx\n",
-        "    y_new = (x - cx) * math.sin(rad) + (y - cy) * math.cos(rad) + cy\n",
-        "    return x_new, y_new\n",
-        "\n",
-        "def rotate_normalized_landmarks(landmarks, angle, max_value):\n",
-        "    # Assuming landmarks are normalized and in pairs of (x, y)\n",
-        "    landmarks = [[landmarks[i], landmarks[i+1]] for i in range(0, len(landmarks), 2)]\n",
-        "\n",
-        "    # Inverse Normalization (if needed)\n",
-        "    landmarks = [[x * max_value, y * max_value] for x, y in landmarks]\n",
-        "\n",
-        "    # Apply rotation\n",
-        "    rotated_landmarks = []\n",
-        "    cx, cy = 0, 0  # Assuming the first point is the base (0,0) after normalization\n",
-        "    for x, y in landmarks:\n",
-        "        x_new, y_new = rotate_point(x, y, cx, cy, angle)\n",
-        "        rotated_landmarks.append([x_new, y_new])\n",
-        "\n",
-        "    # Flatten and Re-Normalize\n",
-        "    rotated_landmarks = list(itertools.chain.from_iterable(rotated_landmarks))\n",
-        "    rotated_landmarks = [n / max_value for n in rotated_landmarks]\n",
-        "\n",
-        "    return rotated_landmarks"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "import cv2\n",
         "import numpy as np\n",
         "import math\n",
-        "\n",
-        "def rotate_landmarks(landmarks, angle, center=None):\n",
-        "    \"\"\"\n",
-        "    Rotate landmarks by a given angle around a center point.\n",
-        "\n",
-        "    :param landmarks: List of (x, y) tuples representing the landmarks.\n",
-        "    :param angle: Rotation angle in degrees.\n",
-        "    :param center: Tuple (x, y) representing the center of rotation. If None, the center of the landmarks is used.\n",
-        "    :return: Rotated landmarks.\n",
-        "    \"\"\"\n",
-        "    if center is None:\n",
-        "        # Calculate the center of all landmarks\n",
-        "        xs, ys = zip(*landmarks)\n",
-        "        center = (sum(xs) / len(landmarks), sum(ys) / len(landmarks))\n",
-        "\n",
-        "    # Convert angle from degrees to radians\n",
-        "    angle_rad = math.radians(angle)\n",
-        "\n",
-        "    # Rotation matrix\n",
-        "    rotation_matrix = np.array([\n",
-        "        [math.cos(angle_rad), -math.sin(angle_rad)],\n",
-        "        [math.sin(angle_rad), math.cos(angle_rad)]\n",
-        "    ])\n",
-        "\n",
-        "    # Rotate each landmark\n",
-        "    rotated_landmarks = []\n",
-        "    for x, y in landmarks:\n",
-        "        # Translate point to origin\n",
-        "        temp_x, temp_y = x - center[0], y - center[1]\n",
-        "\n",
-        "        # Rotate point\n",
-        "        rotated_x, rotated_y = np.dot(rotation_matrix, [temp_x, temp_y])\n",
-        "\n",
-        "        # Translate point back\n",
-        "        rotated_x, rotated_y = rotated_x + center[0], rotated_y + center[1]\n",
-        "\n",
-        "        rotated_landmarks.append((rotated_x, rotated_y))\n",
-        "\n",
-        "    return rotated_landmarks\n",
         "\n",
         "def on_trackbar_change(dummy=None):\n",
         "    # Get current positions of all trackbars\n",
@@ -275,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -283,9 +276,9 @@
         "    augmented_landmarks = []\n",
         "\n",
         "    # Iterate through the specified ranges\n",
-        "    for rotation_angle in range(0, 361, 30):  # [0, 360] with a step of 10\n",
-        "        for shear_x in range(-20, 21, 10):      # [-20, 20] with a step of 5\n",
-        "            for shear_y in range(-20, 21, 10):  # [-20, 20] with a step of 5\n",
+        "    for rotation_angle in range(0, 361, 30):  # [0, 360] with a step of 30\n",
+        "        for shear_x in range(-20, 21, 10):      # [-20, 20] with a step of 10\n",
+        "            for shear_y in range(-20, 21, 10):  # [-20, 20] with a step of 10\n",
         "                if rotation_angle != 360 and (rotation_angle != 0 and shear_x != 0 and shear_y != 0):\n",
         "                    # Apply the tilt transformation\n",
         "                    tilted_landmarks = tilt_keypoints(landmarks, rotation_angle, shear_x, shear_y)\n",
@@ -308,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -353,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -373,11 +366,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "vHBmUf1t9hE1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Python310\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Model\n",
@@ -405,7 +407,6 @@
         "    # Contrastive Head\n",
         "    distance = Lambda(lambda tensors: K.sqrt(K.sum(K.square(tensors[0] - tensors[1]), axis=1, keepdims=True)))([processed_a, processed_b])\n",
         "\n",
-        "\n",
         "    # Classification Head\n",
         "    classification_output = Dense(num_classes, activation='softmax')(processed_a)\n",
         "\n",
@@ -418,23 +419,15 @@
         "    return combined_model, classification_model\n",
         "\n",
         "def contrastive_loss(y_true, y_pred):\n",
-        "    # print shapes\n",
         "    y_true = tf.cast(y_true, tf.float32)\n",
         "    margin = 1 \n",
         "    square_pred = K.square(y_pred)\n",
         "    margin_square = K.square(K.maximum(margin - y_pred, 0))\n",
         "    return K.mean(y_true * square_pred + (1 - y_true) * margin_square)\n",
         "\n",
-        "# def combined_loss(y_true, y_pred, alpha=0.5, beta=0.5):\n",
-        "#     c_loss = contrastive_loss(y_true[0], y_pred[0])\n",
-        "#     # print shapes\n",
-        "#     print(y_true[1].shape)\n",
-        "#     print(y_pred[1].shape)\n",
-        "#     class_loss = sparse_categorical_crossentropy(y_true[1], y_pred[1])\n",
-        "#     return alpha * c_loss + beta * class_loss\n",
         "\n",
-        "input_shape = (21 * 2,)  # Example input shape\n",
-        "num_classes = NUM_CLASSES  # Define NUM_CLASSES appropriately\n",
+        "input_shape = (21 * 2,) \n",
+        "num_classes = NUM_CLASSES \n",
         "\n",
         "# Initialize Backbone\n",
         "backbone = initialize_backbone(input_shape)\n",
@@ -445,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "id": "MbMjOflQ9hE1"
       },
@@ -460,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -498,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -529,11 +522,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "id": "c3Dac0M_9hE2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Python310\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics import f1_score\n",
         "\n",
@@ -548,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -590,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -608,16 +610,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(180, 180, 180, 180)"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "a = augment_landmarks(input_a_train[0])"
+        "len(input_a_train), len(input_a_test), len(input_b_train), len(input_b_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -628,15 +641,12 @@
         "\n",
         "# Reverse of the above function\n",
         "def transform_to_list(input_list):\n",
-        "    return [elem for pair in input_list for elem in pair]\n",
-        "\n",
-        "\n",
-        "a = augment_landmarks(transform_to_pairs(X_dataset[0].tolist()))"
+        "    return [elem for pair in input_list for elem in pair]\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -662,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -678,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -692,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -702,27 +712,6 @@
         "\n",
         "new_input_a_test = np.array(new_input_a_test)\n",
         "new_input_b_test = np.array(new_input_b_test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(False, False, False, False, False, False, False, False)"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "#Check for nan values in all the arrays\n",
-        "np.isnan(new_input_a_train).any(), np.isnan(new_input_b_train).any(), np.isnan(new_input_a_test).any(), np.isnan(new_input_b_test).any(), np.isnan(new_classification_labels_train).any(), np.isnan(new_pair_labels_train).any(), np.isnan(pair_labels_test).any(), np.isnan(classification_labels_test).any()"
       ]
     },
     {
@@ -742,8 +731,85 @@
         }
       ],
       "source": [
+        "#Check for nan values in all the arrays\n",
+        "np.isnan(new_input_a_train).any(), np.isnan(new_input_b_train).any(), np.isnan(new_input_a_test).any(), np.isnan(new_input_b_test).any(), np.isnan(new_classification_labels_train).any(), np.isnan(new_pair_labels_train).any(), np.isnan(pair_labels_test).any(), np.isnan(classification_labels_test).any()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(False, False, False, False, False, False, False, False)"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
         "# Look for infinity\n",
         "np.isinf(new_input_a_train).any(), np.isinf(new_input_b_train).any(), np.isinf(new_input_a_test).any(), np.isinf(new_input_b_test).any(), np.isinf(new_classification_labels_train).any(), np.isinf(new_pair_labels_train).any(), np.isinf(pair_labels_test).any(), np.isinf(classification_labels_test).any()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "360\n",
+            "180 180\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(len(pairs))  # Total number of pairs\n",
+        "print(len(pairs_train), len(pairs_test))  # Number of pairs in training and testing datasets\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "31860 31860 31860 31860\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(len(new_input_a_train), len(new_input_b_train), len(new_classification_labels_train), len(new_pair_labels_train))  # Number of samples in training dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(180, 180, 180, 180)"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(new_input_a_test), len(new_input_b_test), len(classification_labels_test), len(pair_labels_test)  # Number of samples in testing dataset"
       ]
     },
     {
